Fix jumping, make react tab panel use full height and unify textarea height with prod

--- a/frontend/src/modules/entitydetails/components/Editor.css
+++ b/frontend/src/modules/entitydetails/components/Editor.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     height: calc(20% + 60px);
-    min-height: 200px;
+    min-height: 160px;
 }
 
 .editor > textarea {
